  the path fails.
- Fixed #16470: Mail test suite causes fatal errors because of transport
  errors in destructor.
- Fixed #ZETACOMP-75: Mail parser doesn't understand uppercase "CHARSET" that
  alpine uses.
- Fixed #ZETACOMP-76: MailTools::replyTo will always use REPLY_ALL instead of
  distinguishing between REPLY_ALL and REPLY_SENDER.


1.7 - Monday 21 December 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.7rc1 - Monday 07 December 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.7beta1 - Monday 23 November 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #15837: imap.google.com (google gmail) changed IMAP response.


1.7alpha1 - Monday 09 November 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed test cases for PHP 5.3 and later.
- Implemented feature request #14023: Split ezcMailComposer's addAttachment
  into a function for adding file attachments and for adding attachments from
  strings.
- Implemented feature request #14257: Problem accessing multiple headers with
  same headername.
- Implemented feature request #14487: Enable ezcMailComposer to specify
  encoding for text and html parts.
- Implemented feature request #14794: Add an option to parse text attachments
  as file part instead of text part.
- Fixed issue #15341: ezcMailFileParser class function appendStreamFilters not
  working properly for quoted-printable.
- Fixed issue #15456: Problems with parsing emails that have "charset = "
  instead of "charset=".


1.6.3 - Monday 22 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #15068: false ezcMail tests. Based on a patch from Thomas Koch.


1.6.2 - Monday 11 May 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
